<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="100dp"
            android:layout_height="6dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/blue_green"
            android:layout_marginTop="24dp" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/card_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/share_layout"
                android:layout_width="match_parent"
                android:paddingTop="16dp"
                android:paddingHorizontal="16dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tint="@color/blue_green" />

                <TextView
                    android:id="@+id/tv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/img_share"
                    app:layout_constraintTop_toTopOf="@id/img_share"
                    app:layout_constraintBottom_toBottomOf="@id/img_share"
                    android:text="@string/share"
                    android:layout_marginStart="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/black"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_share"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/share_txt_layout"
                android:layout_width="match_parent"
                android:paddingTop="16dp"
                android:paddingHorizontal="16dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_article"
                    app:tint="@color/blue_green"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/img_file"
                    app:layout_constraintTop_toTopOf="@id/img_file"
                    app:layout_constraintBottom_toBottomOf="@id/img_file"
                    android:text="@string/share_txt_file"
                    android:layout_marginStart="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/black"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_file"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/share_pdf_layout"
                android:layout_width="match_parent"
                android:paddingTop="16dp"
                android:paddingHorizontal="16dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_pdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_file"
                    app:tint="@color/blue_green"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_pdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/img_pdf"
                    app:layout_constraintTop_toTopOf="@id/img_pdf"
                    app:layout_constraintBottom_toBottomOf="@id/img_pdf"
                    android:text="@string/convert_to_pdf"
                    android:layout_marginStart="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/black"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_pdf"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/share_pdf_layout_all"
                android:layout_width="match_parent"
                android:padding="16dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_pdf_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="@color/blue_green"
                    android:src="@drawable/ic_open_in_browser"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_pdf_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/img_pdf_"
                    app:layout_constraintTop_toTopOf="@id/img_pdf_"
                    app:layout_constraintBottom_toBottomOf="@id/img_pdf_"
                    android:text="@string/share_pdf_file"
                    android:layout_marginStart="16dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>